# summative-lab-inventory-management-system

./: .gitignore  README.md  pyproject.toml  server.py
src/ims/: cli.py  server.py
src/summative_inventory.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_app.py  test_items_crud.py  test_items_helpers.py  test_openfoodfacts_create.py  test_openfoodfacts_lookup.py  test_openfoodfacts_search.py
