[project]
name = "summative-inventory"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]